<resources>
    <string name="app_name">login-hkAndroid</string>
    <string name="app_connect">App Connect</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="create_account">Create Account</string>
    <string name="email_or_username">Email or Username</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="or_register_with">Or register with</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="already_have_account">Already have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="github_login">GitHub Login</string>
    <string name="google_login">Google Login</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="movie_icon">Movie Icon</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="star">Star</string>
</resources>
