<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fillViewport="true"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="28dp"
        android:paddingVertical="20dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_connect"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_connect"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_back"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAppName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etUsernameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/til_box_stroke_color"
            app:hintTextColor="@color/til_hint_color"
            app:startIconDrawable="@drawable/username_24"
            app:startIconTint="@color/til_icon_tint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_or_username"
                android:inputType="textEmailAddress"
                android:paddingVertical="16dp"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPwdLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/til_box_stroke_color"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/til_icon_tint"
            app:hintTextColor="@color/til_hint_color"
            app:startIconDrawable="@drawable/password_24"
            app:startIconTint="@color/til_icon_tint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etUsernameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingVertical="16dp"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/btn_submit_background_tint"
            android:enabled="false"
            android:text="@string/log_in"
            android:textColor="@color/btn_submit_text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="29dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPwdLayout" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/primary_color"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSubmit" />

        <LinearLayout
            android:id="@+id/layoutDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#44AAB5B6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="14dp"
                android:text="@string/or_log_in_with"
                android:textColor="@color/gray"
                android:textSize="15sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#44AAB5B6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerSocial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutDivider">

            <ImageView
                android:id="@+id/btnGoogle"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="14dp"
                android:background="@drawable/bg_social_circle"
                android:contentDescription="@string/google_login"
                android:padding="13dp"
                android:src="@drawable/google" />

            <ImageView
                android:id="@+id/btnFacebook"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="14dp"
                android:background="@drawable/bg_social_circle"
                android:contentDescription="@string/facebook_login"
                android:padding="13dp"
                android:src="@drawable/facebook" />

            <ImageView
                android:id="@+id/btnGithub"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="14dp"
                android:background="@drawable/bg_social_circle"
                android:contentDescription="@string/github_login"
                android:padding="13dp"
                android:src="@drawable/github"
                app:tint="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerSocial"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/primary_color"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
